--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,19 @@
 {
-    "extends": "google"
+    "env": {
+        "node": true, // this is the best starting point
+        "browser": true, // for react web
+        "es6": true, // enables es6 features
+        "jest": true
+    },
+    "parser": "babel-eslint", // needed to make babel stuff work properly
+    "extends": "airbnb",
+    "rules": {
+        "react/jsx-filename-extension": [
+            1, {
+                "extensions": [
+                    ".js", ".jsx"
+                ]
+            }
+        ]
+    }
 }
